[gd_scene load_steps=4 format=3 uid="uid://dh0itqhp26x2s"]

[ext_resource type="Script" path="res://scenes/PlayScene/PauseMenu.gd" id="1_2e3nw"]
[ext_resource type="Theme" uid="uid://bremf6tlnms1l" path="res://assets/fonts/Font.tres" id="1_jkgns"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yvd2c"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2e3nw")

[node name="PauseMenuPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 750.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_yvd2c")

[node name="PauseBackground" type="ColorRect" parent="PauseMenuPanel"]
layout_mode = 2
color = Color(0.278431, 0.807843, 0.905882, 0.784314)

[node name="MenuItems" type="VBoxContainer" parent="PauseMenuPanel"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="GamePausedLabel" type="Label" parent="PauseMenuPanel/MenuItems"]
layout_mode = 2
theme = ExtResource("1_jkgns")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 50
text = "game paused"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Margin" type="MarginContainer" parent="PauseMenuPanel/MenuItems"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PauseMenuPanel/MenuItems"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("1_jkgns")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "RESUME"

[node name="Margin2" type="MarginContainer" parent="PauseMenuPanel/MenuItems"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="PauseMenuPanel/MenuItems"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("1_jkgns")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "MAIN MENU"

[connection signal="pressed" from="PauseMenuPanel/MenuItems/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenuPanel/MenuItems/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
